--- a/onesg-service.yaml
+++ b/onesg-service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: onesg-service
+  name: onesg
+  labels:
+    app: onesg
 spec:
   selector:
     app: onesg
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8888
+  - port: 80
+    targetPort: 5000
   type: LoadBalancer
+  loadBalancerIP: "35.197.144.41"
